--- a/vets-service.yml
+++ b/vets-service.yml
@@ -10,7 +10,7 @@ eureka:
   instance:
     # enable to register multiple app instances with a random server port
     instance-id: ${spring.application.name}:${random.uuid}
-    hostname: vets-service
+    prefer-ip-address: true
 
 ---
 spring:
