--- a/application.yml
+++ b/application.yml
@@ -32,7 +32,7 @@ spring.cloud.refresh.refreshable: false
 
 
 # Logging
-logging.level.org.springframework: INFO
+logging.level.org.springframework: DEBUG
 
 # Metrics
 management:
