--- a/vets-service.yml
+++ b/vets-service.yml
@@ -6,11 +6,11 @@
 ---
 spring:
   profiles: default
-# eureka:
-#   instance:
-#     # enable to register multiple app instances with a random server port
-#     instance-id: ${spring.application.name}:${random.uuid}
-#     prefer-ip-address: true
+eureka:
+  instance:
+    # enable to register multiple app instances with a random server port
+    instance-id: ${spring.application.name}:${random.uuid}
+    prefer-ip-address: true
 
 ---
 spring:
@@ -19,7 +19,7 @@ spring:
     baseUrl: http://tracing-server:9411
 server:
   port: 8083
-# eureka:
-#   client:
-#     serviceUrl:
-#       defaultZone: http://discovery-server:8761/eureka/
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://discovery-server:8761/eureka/
