--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -17,6 +17,9 @@ server:
 # Internationalization
 spring.messages.basename: messages/messages
 
+# Logging
+logging.level.org.springframework: INFO
+
 ---
 spring:
   profiles: docker
