--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -18,7 +18,7 @@ server:
 spring.messages.basename: messages/messages
 
 # Logging
-logging.level.org.springframework: INFO
+logging.level.org.springframework: DEBUG
 
 ---
 spring:
